--- a/css/style.css
+++ b/css/style.css
@@ -5250,6 +5250,18 @@ a[data-fancybox] img {
 .ani_loadging {
     display: flex;
     opacity: 1;
+    animation: ani_loading 1s 2s;
+    
+}
+@keyframes ani_loading {
+    0% {
+        display: block;
+        opacity: 1;
+    }
+    100% {
+        display: none;
+        opacity: 0;
+    }
 }
 .hide_opacity {
     opacity: 0;
