--- a/css/style.css
+++ b/css/style.css
@@ -5195,18 +5195,22 @@ a[data-fancybox] img {
 }
 @keyframes loading {
     0% {
+        display: block;
     opacity: 0;
     transform: scale(0);
     }
     50% {
+        display: block;
         opacity: 1;
         transform: scale(1);
     }
     75% {
+        display: block;
     opacity: 1;
     transform: scale(10);
     }
     90% {
+        display: block;
         opacity: 0;
         transform: scale(10);
         }
@@ -5241,6 +5245,8 @@ a[data-fancybox] img {
     background-color: var(--background-color);
 }
 .loading_mask_svg img {
+    display: none;
+    opacity: 0;
     width: 50vw;
     height: 100%;
     object-fit: contain;
